# cppexample

./: README.md
mylib/: CMakeLists.txt
mylib/include/: mylib.h
mylib/src/: mylib.cpp
myprogram/: CMakeLists.txt
myprogram/src/: main.cpp
